Remove IDesktop#autoPrefixWildcardForTextSearch
322811